--- a/11.6/ES6.html
+++ b/11.6/ES6.html
@@ -9,12 +9,12 @@
 		// }
 		// add(3,5)
 
-		let arr = [11,24,35,6,8,3,7]
+		let arr = [11,24,35,6,8,3,7];
 		let arr2 = arr.map((index)=>{
 			// alert(`${index},${elem}`)
 			if(index%2 !=0){
 				return index;
-			}
+			};
 		})
 		console.log(`arr2:${arr2}`)
 		// let arr3 = arr.filter(function(item){
