--- a/移动端的练习/方向锁定.html
+++ b/移动端的练习/方向锁定.html
@@ -24,9 +24,10 @@
 				}
 			}
 
-			function fnEnd(){
+			function fnEnd(ev){
 				document.documentElement.removeEventListener('touchmove',fnMove,false);
 				document.documentElement.removeEventListener('touchend',fnEnd,false);
+				console.log(ev)
 			}
 
 			document.documentElement.addEventListener('touchmove',fnMove,false);
